--- a/package.json
+++ b/package.json
@@ -3,15 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@reach/combobox": "^0.10.2",
+    "@reach/combobox": "^0.10.3",
     "@react-google-maps/api": "^1.9.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "date-fns": "^2.13.0",
+    "google-map-react": "^1.1.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "swr": "^0.2.2",
     "typescript": "^3.9.3",
     "use-places-autocomplete": "^1.3.5"
   },
